Known Errors.txt

stormx:31% g++ -o p.out *.cpp
In file included from battle.h:3:0,
                 from battle.cpp:1:
Pokemon.h:44:15: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  int badges = 0;        // increment this as gyms beaten
               ^
In file included from battle.h:3:0,
                 from battle.cpp:1,
                 from gameEngine.h:5,
                 from explore.h:2,
                 from explore.cpp:1:
Pokemon.h:44:15: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  int badges = 0;        // increment this as gyms beaten
               ^
explore.cpp: In member function ‘void explore::whatHappened(GameEngine)’:
explore.cpp:100:28: error: invalid operands of types ‘int()throw ()’ and ‘int’ to binary ‘operator%’
  int whatHappened = rand % 100;
                            ^
In file included from battle.h:3:0,
                 from battle.cpp:1,
                 from gameEngine.h:5,
                 from gameEngine.cpp:1:
Pokemon.h:44:15: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  int badges = 0;        // increment this as gyms beaten
               ^
gameEngine.cpp: In constructor ‘GameEngine::GameEngine()’:
gameEngine.cpp:31:24: error: no matching function for call to ‘Character::Character()’
 GameEngine::GameEngine()
                        ^
gameEngine.cpp:31:24: note: candidates are:
In file included from battle.h:3:0,
                 from battle.cpp:1,
                 from gameEngine.h:5,
                 from gameEngine.cpp:1:
Pokemon.h:47:2: note: Character::Character(std::string, int)
  Character(string name, int gender);
  ^
Pokemon.h:47:2: note:   candidate expects 2 arguments, 0 provided
Pokemon.h:46:2: note: Character::Character(std::string)
  Character(string name);      // create accessors for the items
  ^
Pokemon.h:46:2: note:   candidate expects 1 argument, 0 provided
Pokemon.h:34:7: note: Character::Character(const Character&)
 class Character {
       ^
Pokemon.h:34:7: note:   candidate expects 1 argument, 0 provided
gameEngine.cpp: In function ‘int getInt()’:
gameEngine.cpp:224:5: error: redefinition of ‘int getInt()’
 int getInt()
     ^
In file included from gameEngine.h:5:0,
                 from gameEngine.cpp:1:
battle.cpp:350:5: error: ‘int getInt()’ previously defined here
 int getInt() {
     ^
In file included from battle.h:3:0,
                 from battle.cpp:1,
                 from gameEngine.h:5,
                 from Pokemon.cpp:1:
Pokemon.h:44:15: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  int badges = 0;        // increment this as gyms beaten
               ^
Pokemon.cpp: In constructor ‘Pokemon::Pokemon(int)’:
Pokemon.cpp:19:5: error: ‘choice’ was not declared in this scope
     choice = rand()%10;
     ^
Pokemon.cpp:39:11: error: ‘class Pokemon’ has no member named ‘defense’
     this->defense = int((1.0/(health-((level-1)*20)))*1000 + (rand()%10-5));
           ^
Pokemon.cpp: At global scope:
Pokemon.cpp:51:25: error: no ‘int Pokemon::getDefense()’ member function declared in class ‘Pokemon’
 int Pokemon::getDefense() {
